Fix screen clearing in Windows